*gitlab-ce-9.3.0_rc2 (17 Jun 2017)

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/04-gitlab-ce-9.3.0-fix-check-task.patch, +gitlab-ce-9.3.0_rc2.ebuild,
  -gitlab-ce-9.2.0_rc7.ebuild:
  www-apps/gitlab-ce:  Update 9.2.0_rc7 -> 9.3.0_rc2

*gitlab-ce-9.2.6 (17 Jun 2017)

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.2.6.ebuild,
  -gitlab-ce-9.2.2.ebuild:
  www-apps/gitlab-ce:  Update 9.2.2 -> 9.2.6

*gitlab-ce-9.1.7 (17 Jun 2017)

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.1.7.ebuild,
  -gitlab-ce-9.1.4-r1.ebuild:
  www-apps/gitlab-ce:  Update 9.1.4-r1 -> 9.1.7

*gitlab-ce-9.0.10 (17 Jun 2017)

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.10.ebuild,
  -gitlab-ce-9.0.7.ebuild:
  www-apps/gitlab-ce:  Update 9.0.7 -> 9.0.10

*gitlab-ce-9.0.7 (25 May 2017)

  25 May 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.7.ebuild:
  www-apps/gitlab-ce:  added ebuild for Gitlab CE 9.0.7

*gitlab-ce-9.0.2 (30 Mar 2017)

  30 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.2.ebuild:
  www-apps/gitlab-ce:  added ebuild for Gitlab CE 9.0.2

  30 Mar 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  brought the ebuild for the GIT version (9999) up to speed
  in terms of dependencies.

*gitlab-ce-9.0.1-r1 (30 Mar 2017)

  30 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.1-r1.ebuild,
  -gitlab-ce-9.0.0.ebuild, -gitlab-ce-9.0.1.ebuild, gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  updated dependency on Ruby to ruby-2.3 for Gitlab CE >=9;
  removed ebuild for version 9.0.0, as version 9.0.1 is out.

*gitlab-ce-9.0.1 (29 Mar 2017)

  29 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.1.ebuild,
  metadata.xml:
  www-apps/gitlab-ce:  Added ebuild for Gitlab CE 9.0.1; this is the first one
  with the gitaly USE flag; though that is not supported yet, it must therefore
  be disabled at the moment.
