@@ -31,6 +31,6 @@ EBUILD gitlab-ce-9.0.10.ebuild 13087 SHA256 28da4095f2a71224e5dc0d1edb358218f7a8
 EBUILD gitlab-ce-9.1.7.ebuild 13243 SHA256 70396c636ab5c0490c6641be0fece874d87afafb4d73c6032937b31e9cdca16c SHA512 3ad301c43b4500a1e75b9dc3f694c189d5426bb1a26f512e75e833d849e8d070b162c29425cda42e9cc074b5fe0ed007f5baa9a1c32c47dc478ec7333847c00e WHIRLPOOL f6483c776faefd60a8bd38a769fd326b1351ea9c1df65314baf314d0b4de21304fd618d29a28d8a75ee43977b97d3e6bc23f9d040fde626a20771e901d8f52fe
 EBUILD gitlab-ce-9.2.6.ebuild 12988 SHA256 b6d921492ebd09c4c768d56a46eb4aa24f8f68585b3f4680621952922a2bae83 SHA512 ef38e8c04bf3d2f271fc2afa0e73c21ccc3d8dc583857f71951e3cf3f9ffdf7b362bc5120f4bc892741ae0f9b99cfe8312dbfc9182ee0408f336c863bdefdfa3 WHIRLPOOL 727907a2a38eb287e091bef655f523280f2bf8893fdb8b2e5e58f1d1089c6398772d995bd033997024c32837d995f7c061cfc28c751f913d65761a3f71b14961
 EBUILD gitlab-ce-9.3.0_rc2.ebuild 12822 SHA256 9144b747ac6dc1c21545960749ef0931a8934704feac5cdb7a8b88f7ce264b50 SHA512 04bc05883a0666f68538e828568f199c2d760b29735131ce557b177738bc3235187cfce5a5553c7f989274d96577a40f3962d8d5ce519c2a05749be6c8a847fc WHIRLPOOL a47ee848d7796e8d186ee22984d7f6f7e41e3e546de3098c767019dd1314f62bba51d677a08b847b274184681c687b8391b5f0d8f05821cbd1544d16fffc9d6f
-EBUILD gitlab-ce-9999.ebuild 12936 SHA256 577fb46481f157ac44e97c70c318dcf29aaa300b25d902e5129eac19f9ab18d1 SHA512 fde643225335f33e4b7aa01c33a570670aea8780d2789e15fc356cede52b87fafb5714ce0bb0b03020e7e3e673382aeb06e94e3afa1fe82e289cfbe38cbb6f0e WHIRLPOOL 49e50d7c1a2d4c426b751f6ffb7d9917481c5da804c0af0c17a3367f5d0a456925add5ccd9730938482b4ac5ce84483e3c013d3e38d14302d5be7e01f36e14bf
-MISC ChangeLog 18651 SHA256 63ac9d39a90f2761c193f89624c257f0707e23c59c4a55439be32171edcd22db SHA512 8a69793db7f015c6b2d3697370fd26b0338ff77c908bbbb7c31c8f43f005603a628ac81ea564a754e55b477913552e84b0056a5ff05f40ce88aa98b1481aa878 WHIRLPOOL c1d4df68426899f30db6724c93df81827fba6809c614ecbfc24acf3c36971981bbd9c50d83e7de31e5c3d7e38f44506aa74e579d614ec0f82b7db992dddda3e8
+EBUILD gitlab-ce-9999.ebuild 12782 SHA256 9d8d8407ecc36d9c1c25522856cb543bbd9e96991e207b2056f1c2b8ac0d219c SHA512 d50cfc62d4df3b38295e618f9c52115d7128771fc494684d1414cdf709db668a521929e2108aab0176a5611c5e15838b6dca333141da38763a9e823c52f5a8d8 WHIRLPOOL c84f158d8c8b0c8c6d4c13bb8f03a0d4708846a0b65db9f248bb64954c44007bbe4492f610f5fe5f859ca582e26614827dd81f9ec37791b8f735b373ad05d9b3
+MISC ChangeLog 18769 SHA256 2bfc83849b625b1eda3a5eb5bf629f8e6bdd3cff317205b2f2985d0d0d4d0808 SHA512 0d5cf15b302132b446a3659ecc0be1a09d0060f4b13640186f24928341c746f88ae1793d13481c6b621290329621465ac97b36ef89f8757509662c191dc60bc5 WHIRLPOOL 8070acf834d4cdf744e2304fa8aa9b014c5277c291190dcacbdf9100174aa29f26a34e4442ac0c28a35fe2c698200b5b2b0914a34e380ac698f8bf0ef555ab66
 MISC metadata.xml 801 SHA256 3dc7486a12903f47f65968d524c93500ba30a4a09fa57e5a9dacf356509b44bb SHA512 e132754b72e64246531fa883400a0cf1a473ac5a6a49623db58ccf118a038b7cf37df03d9550f37b4a25f9ddbb1dcc5652ec9a4f2259d8e3ce202692c4025f41 WHIRLPOOL e9d961681fd790008eaf80fa07ce2c55a00a58f2e920d759793783ca8c8f508602a777e94c0cb65fe87c7dbef0cabdf26e4f4082584421097d939cbab20c4ac6
