@@ -1,3 +1,6 @@
+  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild:
+  www-apps/gitlab-ce:  Update version 9999
+
 *gitlab-ce-9.3.0_rc2 (17 Jun 2017)
 
   17 Jun 2017; Manuel Friedli <manuel@fritteli.ch>
